# YCrypt

./: CMakeLists.txt  LICENSE  README.md
include/: sm_interface.h
sm2/: CMakeLists.txt  Makefile  README.md  Readme.md  basicOp.c  ecc.c  ecc2.c  ecc_basepoint_mul.c  ecc_montg.c  extra.c  fieldOp.c  randombytes.c  sign_cases_fix_k.txt  sign_error_cases.txt  sm2.c  sm3.c  test.py  utils.c  xP.txt
sm2/include/: basicOp.h  dataType.h  ecc.h  ensureintrin.h  extra.h  fieldOp.h  randombytes.h  sm2.h  sm2_const.h  sm2_table.h  sm3.h  sm_interface.h  utils.h
sm2/test/: debug_conv  debug_conv.c  debug_double  debug_double.c  debug_double_step  debug_double_step.c  sm2_gadget_test.c  sm_interface.h  test_basicOp  test_basicOp.c  test_openssl  test_sm2.c  test_sm2_quick  test_speed.c  verify_double.py
sm3/: CMakeLists.txt  Makefile  sm3.c  utils.c
sm3/include/: sm3.h  utils.h
sm3/test/: test_sm3.c  test_speed.c
sm4/: CMakeLists.txt  Makefile  sm4.c
sm4/include/: sm4.h  sm4_cbc.h  sm4_ctr.h
sm4/mode/: sm4_cbc.c  sm4_ctr.c
sm4/test/: sm4_ctr.py  test_sm4.c  test_speed.c
